Salvando em CSV

--- a/LoLAPI.ipynb
+++ b/LoLAPI.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "565c9d8d",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
     "load_dotenv()\n",
     "\n",
     "API_KEY = os.getenv(\"RIOT_API_KEY\")\n",
-    "sns.set(style='whitegrid')\n"
+    "sns.set(style='whitegrid')"
    ]
   },
   {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "ca59b7ea",
    "metadata": {},
    "outputs": [
@@ -79,10 +79,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "2eb5c63b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Erro ao buscar partidas: 400 {\"status\":{\"message\":\"Bad Request - invalid parameter value 500, must be between 0 and 100\",\"status_code\":400}}\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "url_matches = f\"https://americas.api.riotgames.com/lol/match/v5/matches/by-puuid/{puuid}/ids?start=0&count=20\"\n",
     "resp_matches = requests.get(url_matches, headers=headers)\n",
@@ -104,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "5ec78717",
    "metadata": {},
    "outputs": [],
@@ -144,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "59d730fc",
    "metadata": {},
    "outputs": [
@@ -214,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "aa502a2f",
    "metadata": {},
    "outputs": [
@@ -222,7 +241,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\cayov\\AppData\\Local\\Temp\\ipykernel_14728\\4086176049.py:2: FutureWarning: \n",
+      "C:\\Users\\cayov\\AppData\\Local\\Temp\\ipykernel_17664\\4086176049.py:2: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -267,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "0065f235",
    "metadata": {},
    "outputs": [
@@ -275,7 +294,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\cayov\\AppData\\Local\\Temp\\ipykernel_14728\\1776892109.py:4: FutureWarning: \n",
+      "C:\\Users\\cayov\\AppData\\Local\\Temp\\ipykernel_17664\\1776892109.py:4: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -319,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "2a3df3a2",
    "metadata": {},
    "outputs": [
@@ -366,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "92ff6d30",
    "metadata": {},
    "outputs": [
@@ -410,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "1776a420",
    "metadata": {},
    "outputs": [
@@ -440,6 +459,34 @@
     ")\n",
     "plt.title(f\"Mapa de Correlação das Estatísticas nas Últimas 20 Partidas - {gameName}\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4fbae8d",
+   "metadata": {},
+   "source": [
+    "# 9.Salvando em CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b06db5b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arquivo 'partidas.csv' Pronto!\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_matches.to_csv(\"partidas.csv\", index=False)\n",
+    "\n",
+    "print(\"Arquivo 'partidas.csv' Pronto!\")"
    ]
   }
  ],
